// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Multi ComboBox As Form Item 1`] = `
<div
  style="height: 300px;"
>
  
    
  <div
    class="fd-form-item"
  >
    
    
    <div
      class="fd-popover"
    >
      
        
      <div
        aria-controls="F4GcX348a"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
        role="combobox"
      >
        
            
        <div
          class="fd-input-group fd-input-group--control"
          tabindex="0"
        >
          
                
          <div
            class="fd-tokenizer"
          >
            
                    
            <div
              class="fd-tokenizer__inner"
            >
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Apple
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Apple"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Orange
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Orange"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Kiwi
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Kiwi"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Banana
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Banana"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <input
                aria-label="multi input sample as form item"
                class="fd-input fd-input-group__input fd-tokenizer__input"
              />
              
                    
            </div>
            
                
          </div>
          
                
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                    
            <button
              aria-controls="F4GcX348a"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="down arrow"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                    
            </button>
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX348a"
      >
        
        
        <div
          class="fd-popover__wrapper"
        >
          
            
          <ul
            aria-label="Fruits"
            aria-multiselectable="true"
            class="fd-list fd-list--multi-input"
            role="listbox"
          >
            
				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg30"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez620"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4e20"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg30"
              >
                Apple
              </span>
              
				
            </li>
            

				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg31"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez621"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez621"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg31"
              >
                Orange
              </span>
              
				
            </li>
            
				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg32"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez622"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez622"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg32"
              >
                Banana
              </span>
              
				
            </li>
            
				
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg33"
                  class="fd-checkbox"
                  id="Ai4ez623"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez623"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg33"
              >
                Kiwi
              </span>
              
				
            </li>
            
				
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg34"
                  class="fd-checkbox"
                  id="Ai4ez624"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez624"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg34"
              >
                Lemon
              </span>
              
				
            </li>
            
            
          </ul>
          
        
        </div>
        
        
      </div>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Cozy And Compact 1`] = `
<div
  class="fd-container"
  style="height: 300px;"
>
  
    
  <div
    class="fd-row"
  >
    
	
    <div
      class="fd-col fd-col--6"
    >
      
        
      <label
        class="fd-form-label"
      >
        
            Multi ComboBox Cozy Mode
        
      </label>
      
        
      <div
        class="fd-popover"
      >
        
            
        <div
          aria-controls="F4GcX348a"
          aria-expanded="true"
          aria-haspopup="true"
          class="fd-popover__control"
          role="combobox"
        >
          
                
          <div
            class="fd-input-group fd-input-group--control"
            tabindex="0"
          >
            
                    
            <div
              class="fd-tokenizer"
            >
              
                        
              <div
                class="fd-tokenizer__inner"
              >
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Apple
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: apple"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Orange
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Banana
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Banana"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <input
                  aria-label="multi input cozy"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                        
              <button
                aria-controls="F4GcX348a"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
              >
                
                            
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                        
              </button>
              
                    
            </span>
            
                
          </div>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
          id="F4GcX348a"
        >
          
            
          <div
            class="fd-popover__wrapper"
          >
            
                
            <ul
              aria-label="Fruits"
              aria-multiselectable="true"
              class="fd-list fd-list--multi-input"
              role="listbox"
            >
              
					
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg2"
                    checked=""
                    class="fd-checkbox"
                    id="Ai4ez611"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez611"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg2"
                >
                  Apple
                </span>
                
					
              </li>
              

					
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg21"
                    checked=""
                    class="fd-checkbox"
                    id="Ai4ez612"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez12"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg21"
                >
                  Orange
                </span>
                
					
              </li>
              
					
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg22"
                    checked=""
                    class="fd-checkbox"
                    id="Ai4ez613"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez613"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg22"
                >
                  Banana
                </span>
                
					
              </li>
              
					
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg23"
                    class="fd-checkbox"
                    id="Ai4ez614"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez614"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg23"
                >
                  Kiwi
                </span>
                
					
              </li>
              
					
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg24"
                    class="fd-checkbox"
                    id="Ai4ez615"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez615"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg24"
                >
                  Lemon
                </span>
                
					
              </li>
              
                
            </ul>
            
            
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <label
        class="fd-form-label"
      >
        
            Multi ComboBox Compact Mode
        
      </label>
      

        
      <div
        class="fd-popover"
      >
        
            
        <div
          aria-controls="F4GcX34a"
          aria-expanded="true"
          aria-haspopup="true"
          class="fd-popover__control"
          role="combobox"
        >
          
                
          <div
            class="fd-input-group fd-input-group--control"
            tabindex="0"
          >
            
                    
            <div
              class="fd-tokenizer fd-tokenizer--compact"
            >
              
                        
              <div
                class="fd-tokenizer__inner"
              >
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Apple
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Apple"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Orange
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Banana
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Bannana"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <input
                  aria-label="Multi Input Sample"
                  class="fd-input fd-input-group__input fd-input--compact fd-tokenizer__input"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <span
              class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
            >
              
                        
              <button
                aria-controls="F4GcX34a"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="hidden button"
                class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
              >
                
                            
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                        
              </button>
              
                    
            </span>
            
                
          </div>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
          id="F4GcX34a"
        >
          
            
          <div
            class="fd-popover__wrapper"
          >
            
                
            <ul
              aria-label="Fruits"
              aria-multiselectable="true"
              class="fd-list fd-list--multi-input fd-list--compact"
              role="listbox"
            >
              
                   	
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg25"
                    checked=""
                    class="fd-checkbox fd-checkbox--compact"
                    id="Ai4ez616"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez616"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg25"
                >
                  Apple
                </span>
                
					
              </li>
              

					
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg26"
                    checked=""
                    class="fd-checkbox fd-checkbox--compact"
                    id="Ai4ez617"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez617"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg26"
                >
                  Orange
                </span>
                
					
              </li>
              
					
              <li
                aria-selected="true"
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg2a"
                    checked=""
                    class="fd-checkbox fd-checkbox--compact"
                    id="Ai4ez61a3"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez61a3"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg2a"
                >
                  Banana
                </span>
                
					
              </li>
              
					
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg27"
                    class="fd-checkbox fd-checkbox--compact"
                    id="Ai4ez618"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez618"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg27"
                >
                  Kiwi
                </span>
                
					
              </li>
              
					
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
						
                <div
                  class="fd-form-item fd-list__form-item"
                >
                  
							
                  <input
                    aria-labelledby="Az0bg28"
                    class="fd-checkbox fd-checkbox--compact"
                    id="Ai4ez619"
                    type="checkbox"
                  />
                  
							
                  <label
                    class="fd-checkbox__label"
                    for="Ai4ez619"
                    tabindex="-1"
                  />
                  
						
                </div>
                
						
                <span
                  class="fd-list__title"
                  id="Az0bg28"
                >
                  Lemon
                </span>
                
					
              </li>
              
                
            </ul>
            
            
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Filtering 1`] = ` `;

exports[`Storyshots Patterns/Multi ComboBox Grouping 1`] = `
<div
  style="height: 450px;"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4H8X34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
      role="combobox"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
        tabindex="0"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              aria-label="multi input sample as group item"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4H8X34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4H8X34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
           
        <label
          class="fd-list__group-header"
          id="selectMultipleFruitsLabel"
        >
          
                Fruits
            
        </label>
        
            
        <ul
          aria-labelledby="selectMultipleFruitsLabel"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
               
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg35"
                checked=""
                class="fd-checkbox"
                id="Ai4ez625"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez625"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg35"
            >
              Apple
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg36"
                checked=""
                class="fd-checkbox"
                id="Ai4ez626"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez626"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg36"
            >
              Orange
            </span>
            
				
          </li>
          
				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg37"
                checked=""
                class="fd-checkbox"
                id="Ai4ez627"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez627"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg37"
            >
              Banana
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg38"
                class="fd-checkbox"
                id="Ai4ez628"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez628"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg38"
            >
              Kiwi
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg39"
                class="fd-checkbox"
                id="Ai4ez629"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez629"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg39"
            >
              Lemon
            </span>
            
				
          </li>
          
            
        </ul>
        
            
        <label
          class="fd-list__group-header"
          id="selectMultipleVegsLabel"
        >
          
                Vegetables
            
        </label>
        
            
        <ul
          aria-labelledby="selectMultipleVegsLabel"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
 				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg40"
                checked=""
                class="fd-checkbox"
                id="Ai4ez630"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez630"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg40"
            >
              Onion
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg41"
                checked=""
                class="fd-checkbox"
                id="Ai4ez631"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez632"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg41"
            >
              Tomato
            </span>
            
				
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Match Popover Body Size 1`] = `
<div
  style="height: 300px;"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4HGFHX34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
      role="combobox"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
        tabindex="0"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              aria-label="multi input sample popover size body"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4HGFHX34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="F4HGFHX34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
            
        <ul
          aria-label="fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
        		
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg42"
                checked=""
                class="fd-checkbox"
                id="Ai4ez633"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez633"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg42"
            >
              Apple
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg43"
                checked=""
                class="fd-checkbox"
                id="Ai4ez634"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez634"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg43"
            >
              Orange
            </span>
            
				
          </li>
          
				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg44"
                checked=""
                class="fd-checkbox"
                id="Ai4ez635"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez635"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg44"
            >
              Banana
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg45"
                class="fd-checkbox"
                id="Ai4ez636"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez636"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg45"
            >
              Kiwi
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg46"
                class="fd-checkbox"
                id="Ai4ez637"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez637"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg46"
            >
              Lemon
            </span>
            
				
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Mobile Mode 1`] = `
<div
  class="fd-dialog fd-dialog-docs-static fd-select-docs-max-height fd-dialog--active"
  id="select-dialog-example"
>
  
    
  <div
    class="fd-dialog__content"
  >
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <h3
            class="fd-title fd-title--h5"
          >
            
                        Select Ingredient
                    
          </h3>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="close"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--decline"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-dialog__subheader fd-bar fd-bar--cozy fd-bar--subheader"
    >
      
            
      <div
        class="fd-bar__middle"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <div
            class="fd-input-group"
            tabindex="0"
          >
            
                        
            <div
              class="fd-tokenizer"
            >
              
                             
              <div
                class="fd-tokenizer__inner"
              >
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Apple
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Apple"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Orange
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Kiwi
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Kiwi"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-tokenizer__indicator"
                >
                  4 more
                </span>
                 
                                 
                <input
                  aria-label="multi input mobile mode"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
                             
              </div>
              
                         
            </div>
            
                        
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                            
              <button
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                            
              </button>
              
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="multi combobox mobilmode button"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--multiselect-all"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dialog__body fd-dialog__body--no-vertical-padding"
    >
      
             
      <ul
        aria-label="Fruits"
        aria-multiselectable="true"
        class="fd-list fd-list--multi-input fd-list--has-message"
        role="listbox"
      >
        
				
        <li
          class="fd-list__message fd-list__message--success"
          role="option"
        >
          Success Message
        </li>
        
				
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
					
          <div
            class="fd-form-item fd-list__form-item"
          >
            
						
            <input
              aria-labelledby="Az0bg52"
              checked=""
              class="fd-checkbox"
              id="Ai4ez643"
              type="checkbox"
            />
            
						
            <label
              class="fd-checkbox__label"
              for="Ai4ez643"
              tabindex="-1"
            />
            
					
          </div>
          
				
          <span
            class="fd-list__title"
            id="Az0bg52"
          >
            Apple
          </span>
          
				
        </li>
        
				
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
					
          <div
            class="fd-form-item fd-list__form-item"
          >
            
						
            <input
              aria-labelledby="Az0bg53"
              checked=""
              class="fd-checkbox"
              id="Ai4ez644"
              type="checkbox"
            />
            
						
            <label
              class="fd-checkbox__label"
              for="Ai4ez644"
              tabindex="-1"
            />
            
					
          </div>
          
					
          <span
            class="fd-list__title"
            id="Az0bg53"
          >
            Orange
          </span>
          
				
        </li>
        
				
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
					
          <div
            class="fd-form-item fd-list__form-item"
          >
            
						
            <input
              aria-labelledby="Az0bg54"
              checked=""
              class="fd-checkbox"
              id="Ai4ez645"
              type="checkbox"
            />
            
						
            <label
              class="fd-checkbox__label"
              for="Ai4ez645"
              tabindex="-1"
            />
            
					
          </div>
          
					
          <span
            class="fd-list__title"
            id="Az0bg54"
          >
            Banana
          </span>
          
				
        </li>
        
				
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
					
          <div
            class="fd-form-item fd-list__form-item"
          >
            
						
            <input
              aria-labelledby="Az0bg55"
              class="fd-checkbox"
              id="Ai4ez646"
              type="checkbox"
            />
            
						
            <label
              class="fd-checkbox__label"
              for="Ai4ez646"
              tabindex="-1"
            />
            
					
          </div>
          
					
          <span
            class="fd-list__title"
            id="Az0bg55"
          >
            Kiwi
          </span>
          
				
        </li>
        
				
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
					
          <div
            class="fd-form-item fd-list__form-item"
          >
            
						
            <input
              aria-labelledby="Az0bg56"
              class="fd-checkbox"
              id="Ai4ez647"
              type="checkbox"
            />
            
						
            <label
              class="fd-checkbox__label"
              for="Ai4ez647"
              tabindex="-1"
            />
            
					
          </div>
          
					
          <span
            class="fd-list__title"
            id="Az0bg56"
          >
            Lemon
          </span>
          
				
        </li>
        
             
      </ul>
      
        
    </div>
    
       
    <footer
      class="fd-dialog__footer fd-bar fd-bar--cozy fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized"
          >
            OK
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Read Only And Disabled 1`] = `
<div
  class="fd-container"
>
  
	
  <div
    class="fd-row"
  >
    
		
    <div
      class="fd-col fd-col--6"
    >
      
			
      <div
        class="fd-popover"
      >
        
				
        <div
          aria-controls="F4GcX3X8a"
          aria-expanded="false"
          aria-haspopup="false"
          class="fd-popover__control"
          role="combobox"
        >
          
					
          <div
            aria-readonly="true"
            class="fd-input-group fd-input-group--control"
            readonly=""
            tabindex="0"
          >
            
						
            <div
              class="fd-tokenizer fd-tokenizer--readonly"
            >
              
							
              <div
                class="fd-tokenizer__inner"
              >
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Bibendum
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Lorem
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Dolor
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Filter
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Lorem
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-tokenizer__indicator"
                >
                  
									
                  <div
                    class="fd-popover"
                  >
                    
										
                    <div
                      aria-controls="F4GF5348a"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="multi combobox"
                      class="fd-popover__control fd-input-group__control"
                    >
                      
											
                      <span
                        class="fd-tokenizer__indicator"
                        role="button"
                      >
                        
												4 more
											
                      </span>
                      
										
                    </div>
                    
										
                    <div
                      aria-hidden="true"
                      class="fd-popover__body"
                      id="F4GF5348a"
                    >
                      
										
                    </div>
                    
									
                  </div>
                  
								
                </span>
                
								
                <input
                  aria-label="multi input readonly or disabled"
                  aria-readonly="true"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                  readonly=""
                />
                
							
              </div>
              
						
            </div>
            
					
          </div>
          
				
        </div>
        
			
      </div>
      
			
    </div>
    
			
    <div
      class="fd-col fd-col--6"
    >
      
				
      <div
        class="fd-popover"
      >
        
					
        <div
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="true"
          class="fd-popover__control"
          disabled=""
          role="combobox"
        >
          
						
          <div
            aria-disabled="true"
            class="fd-input-group fd-input-group--control"
            disabled=""
            tabindex="0"
          >
            
							
            <div
              class="fd-tokenizer"
            >
              
								
              <div
                class="fd-tokenizer__inner"
              >
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Bibendum
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Lorem
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Dolor
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Filter
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Lorem
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-tokenizer__indicator"
                >
                  
										
                  <div
                    class="fd-popover"
                  >
                    
											
                    <div
                      aria-controls="F4GcX34Xa"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="multi combobox"
                      class="fd-popover__control fd-input-group__control"
                    >
                      
												
                      <span
                        class="fd-tokenizer__indicator"
                        role="button"
                      >
                        
													4 more
												
                      </span>
                      
											
                    </div>
                    
											
                    <div
                      aria-hidden="true"
                      class="fd-popover__body"
                      id="F4GcX34Xa"
                    >
                      
											
                    </div>
                    
										
                  </div>
                  
									
                </span>
                
									
                <input
                  aria-label="multi input read only or disabled"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
								
              </div>
              
							
            </div>
            
							
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
								
              <button
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
                tabindex="-1"
              >
                
									
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
								
              </button>
              
							
            </span>
            
						
          </div>
          
					
        </div>
        
				
      </div>
      
			
    </div>
    
		
  </div>
  
	
</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Semantic 1`] = `
<div
  style="height: 300px;"
>
  

  <div
    class="fd-popover"
  >
    
    
    <div
      aria-controls="F4GcKJH8a"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="multi combobox"
      class="fd-popover__control fd-input-group__control"
      role="combobox"
    >
      
        
      <div
        class="fd-input-group fd-input-group--control is-success"
        tabindex="0"
      >
        
            
        <div
          class="fd-tokenizer"
        >
          
                 
          <div
            class="fd-tokenizer__inner"
          >
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Apple
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Orange
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Kiwi
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-tokenizer__indicator"
            >
              4 more
            </span>
             
                     
            <input
              aria-label="multi input semantic"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                 
          </div>
          
            
        </div>
        
            
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                
          <button
            aria-controls="F4GcKJH8a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                    
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                
          </button>
          
            
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4GcKJH8a"
    >
      
      
      <div
        class="fd-popover__wrapper"
      >
        
        
        <ul
          aria-label="Fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input fd-list--has-message"
          role="listbox"
        >
          
			
          <li
            class="fd-list__message fd-list__message--success"
            role="option"
          >
            Success Message
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg47"
                checked=""
                class="fd-checkbox"
                id="Ai4ez638"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez638"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg47"
            >
              Apple
            </span>
            
			
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg48"
                checked=""
                class="fd-checkbox"
                id="Ai4ez639"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez639"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg48"
            >
              Orange
            </span>
            
			
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg49"
                checked=""
                class="fd-checkbox"
                id="Ai4ez640"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez640"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg49"
            >
              Banana
            </span>
            
			
          </li>
          
			
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg50"
                class="fd-checkbox"
                id="Ai4ez641"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez641"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg50"
            >
              Kiwi
            </span>
            
			
          </li>
          
			
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg51"
                class="fd-checkbox"
                id="Ai4ez642"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez642"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg51"
            >
              Lemon
            </span>
            
			
          </li>
          
        
        </ul>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Two Column Combo Box 1`] = ` `;
